<resources>
    <string name="app_name">boris_stojanovic_rn3518</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_edit_profile" translatable="false">EditProfileActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="total_expenses">Total Expenses:</string>
    <string name="total_income">Total income:</string>
    <string name="total_difference">Total Difference</string>
    <string name="description">Description:</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="title">Title:</string>
    <string name="quantity">Quantity:</string>
    <string name="finance_data">Finance Data</string>
    <string name="audio">Audio</string>
    <string name="confirm">Confirm</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="bank">Bank</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login">Login</string>
    <string name="welcome_to_raf_wallet_app">Welcome to Raf Wallet App</string>
    <string name="user_details">User Details</string>
    <string name="logout">Logout</string>
    <string name="user_profile">User Profile</string>
    <string-array name="finances">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
</resources>