<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.AccountFragment" >

    <TextView
        android:id="@+id/txtExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:textColor="#FF0000"
        app:layout_constraintStart_toEndOf="@+id/txtExpensesLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtIncome" />

    <TextView
        android:id="@+id/txtIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:textColor="#00FF00"
        app:layout_constraintStart_toEndOf="@+id/txtIncomeLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtExpensesLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:textColor="#FF0000"
        android:text="@string/total_expenses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIncomeLabel" />

    <TextView
        android:id="@+id/txtIncomeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="150dp"
        android:text="@string/total_income"
        android:textColor="#00FF00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTotalDifferenceLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/total_difference"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExpensesLabel" />

    <TextView
        android:id="@+id/txtTotalDifference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/txtTotalDifferenceLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtExpense" />
</androidx.constraintlayout.widget.ConstraintLayout>